--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "artik webcam",
   "main": "websocket-relay.js",
   "dependencies": {
+    "express": "^4.16.3",
     "http-server": "^0.11.1",
     "jsmpeg": "^1.0.0",
     "ws": "^6.0.0"
